<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edt1"
        android:layout_width="336dp"
        android:layout_height="76dp"
        android:fontFamily="monospace"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text=""
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="336dp"
        android:layout_height="3dp"
        android:background="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="207dp" />

    <Button
        android:id="@+id/buttonAC"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/ac"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonPlusMinus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/minus_plus"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonPercent"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/percent"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonDivision"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/orange"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/division"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/orange"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/multiply"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonSub"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/orange"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/minus"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/orange"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/plus"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/orange"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/result"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.885"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/dark_grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/dot"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button0"
        android:layout_width="152dp"
        android:layout_height="71dp"
        android:backgroundTint="@color/dark_grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/zero"
        android:textAlignment="textStart"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/dark_grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/one"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/dark_grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/two"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/dark_grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/three"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.753"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/dark_grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/four"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/dark_grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/five"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/dark_grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/six"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/dark_grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/seven"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/dark_grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/eight"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/dark_grey"
        android:backgroundTintMode="src_atop"
        android:fontFamily="monospace"
        android:text="@string/nine"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>